[tool.poetry]
name = "poetry-pedido-ahora"
version = "0.1.0"
description = "Proyecto para la materia desarrollo de software"
authors = ["Federico Cabaña <federicogabriel12@hotmail.com>"]
readme = "README.md"    

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
